--- a/src/views/_includes/blocks/header.pug
+++ b/src/views/_includes/blocks/header.pug
@@ -1,3 +1,27 @@
 header.header
-    .container
-        | header
+  .navigation.header__navigation
+    .container.header__container 
+      button.header-button.navigation__button РАссчитать кухню
+      .header__location
+        span.header__location-place Москва
+      .header__about О компании
+      ul.header__menu
+        li.header__menu-item 
+          a(href='#') Акции
+        li.header__menu-item
+          a(href='#')  Контакты 
+        li.header__menu-item 
+          a(href='#') Замер
+        li.header__menu-item 
+          a(href='#') Рассрочка
+        li.header__menu-item 
+          a(href='#') Адреса салонов
+      .header__contacts
+        a(href="mailto:info@kuhnicity.ru").header__contacts-mail info@kuhnicity.ru
+        button.header__contacts-button Заказать звонок
+        a(href="tel:+74991354378").header__contacts-phone +7 (499) 135-43-78
+  .header__block
+    .container.header__container
+      button.header__block-open каталог
+      .header__logo 
+      button.header-button.header__block-button РАссчитать кухню
