--- a/src/views/_includes/layout.pug
+++ b/src/views/_includes/layout.pug
@@ -1,7 +1,7 @@
 block config
 
 doctype html
-html(lang=__.lang, class="no-js")
+html(lang="ru", class="no-js")
     head
         block head
             include head
