--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,15 +1,7 @@
-//- extends _includes/layout
+extends _includes/layout
 
-//- block config
-//-     - var pagetitle = 'Index'
+block config
+    - var pagetitle = 'Кухнисити'
 
-//- block content
-//-     .container
-//-         p Hello world
-//-         //ul.dev-menu
-//-             li.dev-menu__item
-//-                 a(href="main.html") Главная
-//-             li.dev-menu__item
-//-                 span.link.js-popup(data-href="#login") Авторизация
-//-             li.dev-menu__item
-//-                 span.link.js-popup(data-href="#register") Регистрация
+block content
+   
