--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -7,7 +7,7 @@
     letter-spacing: $letter-spacing;
     line-height   : $line-height;
 
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(md) {
         font-size  : $font-size-lg;
         line-height: $line-height-lg;
     }
