--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,20 +1,20 @@
 .body {
     background: $color-bg;
-    color     : $color-text;
+    color: $color-text;
 
-    font-family   : $font-family;
-    font-size     : $font-size;
+    font-family: $font-family;
+    font-size: $font-size;
     letter-spacing: $letter-spacing;
-    line-height   : $line-height;
+    line-height: $line-height;
 
     @include media-breakpoint-up(md) {
-        font-size  : $font-size-lg;
+        font-size: $font-size-lg;
         line-height: $line-height-lg;
     }
 
     &._frozen {
         overflow: hidden;
-        height  : 100%;
+        height: 100%;
     }
 
 }
@@ -76,7 +76,7 @@
 a,
 .link {
     cursor: pointer;
-    color : $color-link;
+    color: $color-link;
 }
 
 strong {
@@ -99,8 +99,8 @@ strong {
     @include media-breakpoint-down(sm) {
         position: fixed;
         overflow: hidden;
-        height  : 100%;
-        width   : 100%;
+        height: 100%;
+        width: 100%;
     }
 }
 
@@ -122,8 +122,58 @@ strong {
     }
 
     &__item {
-        display          : block;
-        margin-bottom    : 1em;
+        display: block;
+        margin-bottom: 1em;
         page-break-inside: avoid;
+    }
+}
+
+.title {
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 36px;
+    line-height: 117.3%;
+    /* or 42px */
+    letter-spacing: -0.025em;
+
+}
+
+.mainForm {
+    // justify-content: space-between;
+    // display: flex;
+    // flex-direction: column;
+
+    &__input {
+        border-bottom: 1px solid #9D9D9D;
+        padding-bottom: 27px;
+        padding-left: 20px;
+        // width: 270px;
+        width: 100%;
+
+        &::placeholder {
+            color: #585858;
+        }
+
+        &-group {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+    }
+}
+
+.button {
+    width: 100%;
+    padding: 17px 0;
+    text-align: center;
+    color: $color-white;
+    line-height: 120.3%;
+    /* identical to box height, or 17px */
+    letter-spacing: 0.07em;
+    text-transform: uppercase;
+    font-family: 'Averta', sans-serif;
+
+    &--primary {
+        background-color: $color-red;
     }
 }
