--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,21 +1,21 @@
 /* Main Colors */
-$color-base      : #323232;
-$color-red       : #FF3D00;
-$color-blue      : #0E3DB8;
+$color-base : #323232;
+$color-red : #FF3D00;
+$color-blue : #0E3DB8;
 $color-light: #E3E3E3;
-$color-white     : #FFFFFF;
+$color-white : #FFFFFF;
 
-$color-bg              : $color-white;
-$color-text            : $color-base;
-$color-link            : $color-red;
-$color-link-hover      : $color-blue;
-$color-error           : $color-red;
+$color-bg : $color-white;
+$color-text : $color-base;
+$color-link : $color-red;
+$color-link-hover : $color-blue;
+$color-error : $color-red;
 $color-popup-background: #fff;
 
-$color-overlay  : $color-base;
+$color-overlay : $color-base;
 $opacity-overlay: .4;
 
-$link-opacity    : .7;
+$link-opacity : .7;
 
 $transition-duration: .2s;
 $transition-timing-function: ease-in-out;
@@ -23,15 +23,17 @@ $transition-timing-function: ease-in-out;
 $header-z-index: 1000;
 
 /* Fonts */
-$font-family         : sans-serif;
-$font-family-alt     : 'Cormorant Garamond', serif;
+$font-family : 'Averta',
+sans-serif;
+$font-family-alt : 'Cormorant Garamond',
+serif;
 $font-family-fontello: "fontello";
-$font-size           : 14px;
-$font-size-lg        : 16px;
-$font-weight         : normal;
-$letter-spacing      : 0.035em;
-$line-height         : 140%;
-$line-height-lg      : 140%;
+$font-size : 14px;
+$font-size-lg : 16px;
+$font-weight : normal;
+$letter-spacing : 0.035em;
+$line-height : 140%;
+$line-height-lg : 140%;
 
 /* Screen sizes */
 $grid-breakpoints: (xs: 0,
