--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -17,5 +17,6 @@
 // Components
 @import "components/content";
 @import "components/header";
+@import "components/hero";
 
 @import "components/media";
