--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -18,5 +18,9 @@
 @import "components/content";
 @import "components/header";
 @import "components/hero";
+@import "components/benefits";
+@import "components/discounts";
+@import "components/production";
+@import "components/models";
 
 @import "components/media";
