--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -6,3 +6,15 @@ block config
 block content
     block hero
      include _includes/blocks/hero
+
+    block benefits
+       include _includes/blocks/benefits
+
+    block discounts
+       include _includes/blocks/discounts
+
+    block production
+       include _includes/blocks/production
+
+    block models
+       include _includes/blocks/models
