--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,8 +1,8 @@
 /* common */
 
 @mixin transition($p) {
-    transition-property       : $p;
-    transition-duration       : $transition-duration;
+    transition-property: $p;
+    transition-duration: $transition-duration;
     transition-timing-function: $transition-timing-function;
 }
 
@@ -20,15 +20,18 @@
 }
 
 @mixin border-inset($width, $color) {
-    box-shadow: inset $width 0 0 $color, 
-        inset 0 $width 0 $color, 
-        inset (-$width) 0 0 $color, 
+    box-shadow: inset $width 0 0 $color,
+        inset 0 $width 0 $color,
+        inset (-$width) 0 0 $color,
         inset 0 (-$width) 0 $color;
 }
 
 @mixin hover-desktop() {
     @include media-breakpoint-up(lg) {
-        @media (hover) , (min-width:0\0) , (min--moz-device-pixel-ratio:0){
+
+        @media (hover),
+        (min-width:0\0),
+        (min--moz-device-pixel-ratio:0) {
             &:hover {
                 @content
             }
@@ -38,7 +41,30 @@
 
 /*https://stackoverflow.com/questions/18907131/detecting-ie11-using-css-capability-feature-detection*/
 @mixin ie10up() {
-    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+
+    @media all and (-ms-high-contrast: none),
+    (-ms-high-contrast: active) {
         @content
+    }
+}
+
+@mixin background-dimm() {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@mixin filter-text($filter-color) {
+    font-size: 18px;
+    line-height: 25px;
+    letter-spacing: 0.135em;
+    text-transform: uppercase;
+    color: $filter-color;
+
+    @include media-breakpoint-up(md) {
+        font-size: 20px;
     }
 }
