--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -2,6 +2,9 @@
     background: url('../img/hero/hero-bg-lg.webp') 59% 31%/ cover;
     height: 910px;
     position: relative;
+    max-width: 1920px;
+    margin-left: auto;
+    margin-right: auto;
 
     &__container {
         // background: url('../img/hero/hero-blur.png') no-repeat 3% 16%;
@@ -65,6 +68,7 @@
             /* identical to box height */
             letter-spacing: 0.06em;
             color: #373737;
+            font-weight: normal;
             // width: 92px;
         }
     }
