--- a/src/views/_includes/head.pug
+++ b/src/views/_includes/head.pug
@@ -13,6 +13,7 @@ title #{pagetitle}
 	meta(name="msapplication-TileColor" content="#ffffff")
 	meta(name="msapplication-config" content="assets/browserconfig.xml")
 	meta(name="theme-color" content="#ffffff")
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
 meta(name="description" content="Description")
 meta(property="og:url" content="https://")
