--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -22,5 +22,7 @@
 @import "components/discounts";
 @import "components/production";
 @import "components/models";
+@import "components/stages";
+@import "components/feedback";
 
 @import "components/media";
