--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -36,6 +36,7 @@
         color: #181818;
         width: 226px;
         margin-bottom: 16px;
+        font-weight: 500;
     }
 
     &__description {
