--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,20 +1,26 @@
 extends _includes/layout
 
 block config
-    - var pagetitle = 'Кухнисити'
+  - var pagetitle = 'Кухнисити'
 
 block content
-    block hero
-     include _includes/blocks/hero
+  block hero
+    include _includes/blocks/hero
 
-    block benefits
-       include _includes/blocks/benefits
+  block benefits
+    include _includes/blocks/benefits
 
-    block discounts
-       include _includes/blocks/discounts
+  block discounts
+    include _includes/blocks/discounts
 
-    block production
-       include _includes/blocks/production
+  block production
+    include _includes/blocks/production
 
-    block models
-       include _includes/blocks/models
+  block models
+    include _includes/blocks/models
+
+  block stages
+    include _includes/blocks/stages
+
+  block feedback
+    include _includes/blocks/feedback
