--- a/src/scss/components/_models.scss
+++ b/src/scss/components/_models.scss
@@ -39,6 +39,20 @@
         }
     }
 
+    &__button {
+        font-size: 14px;
+        line-height: 120.3%;
+        /* identical to box height, or 17px */
+        letter-spacing: 0.105em;
+        text-transform: uppercase;
+
+        &::after {
+            content: url('../img/button-arrow.svg');
+            margin-left: 12px;
+            display: inline-block;
+        }
+    }
+
 
 }
 
