--- a/src/views/_includes/blocks/models.pug
+++ b/src/views/_includes/blocks/models.pug
@@ -11,7 +11,7 @@ section.models
           span.models__filter Красные
           span.models__filter Из массива
           span.models__filter Из дерева
-          span.models__filter Прямиe
+         
 
   .container.models__container2
     .card
@@ -49,6 +49,10 @@ section.models
         span.card__info-name Bristel PRO
         span.card__info-price от 40 215 ₽/м²
       p.card__description Роскошная дворцовая классика
+
+    button.button.button--red.models__button Посмотреть все
+
+    
 
 
 
