--- a/src/views/_includes/blocks/feedback.pug
+++ b/src/views/_includes/blocks/feedback.pug
@@ -39,8 +39,31 @@ section.feedback
             p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏 
             .span.feedback__card-date 06.05.2019 в 15:20
             a(href="#").feedback__card-button Перейти к отзыву
-        
-        
+
+
       .swiper-button-prev.feedback__swiper-button-prev
       .swiper-button-next.feedback__swiper-button-next
-  
+
+    .banner__title Занимаем лидирующие позиции
+
+    .swiper-container.banner__swiper-container
+      .swiper-wrapper.banner__swiper-wrapper 
+        .swiper-slide.banner__swiper-slide
+            .banner__card
+              .banner__card-info
+                span.banner__card-rate 4.9
+                a(href="#").banner__card-logo
+                  img(src="assets/img/feedback/otzovik.svg", alt="Otzovik")
+              p.banner__card-quantity На основе 32 отзывов
+            .banner__card
+              .banner__card-info
+                span.banner__card-rate 4.9
+                a(href="#").banner__card-logo
+                  img(src="assets/img/feedback/otzovik.svg", alt="Otzovik")
+              p.banner__card-quantity На основе 32 отзывов
+            .banner__card
+              .banner__card-info
+                span.banner__card-rate 4.9
+                a(href="#").banner__card-logo
+                  img(src="assets/img/feedback/otzovik.svg", alt="Otzovik")
+              p.banner__card-quantity На основе 32 отзывов
