--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -24,3 +24,9 @@ block content
 
   block feedback
     include _includes/blocks/feedback
+
+  block social
+    include _includes/blocks/social
+
+  block articles
+    include _includes/blocks/articles  
