--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -24,5 +24,7 @@
 @import "components/models";
 @import "components/stages";
 @import "components/feedback";
+@import "components/social";
+@import "components/articles";
 
 @import "components/media";
