--- a/src/views/_includes/blocks/models.pug
+++ b/src/views/_includes/blocks/models.pug
@@ -4,7 +4,7 @@ section.models
     .swiper-container.models__swiper-container
       .swiper-wrapper.models__swiper-wrapper
         .swiper-slide.models__swiper-slide
-          span.models__filter Кухни со скидкой
+          span.models__filter.models__filter--active Кухни со скидкой
           span.models__filter Прямие
           span.models__filter С островом
           span.models__filter Белые
