feat: raw mobile - ready

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -26,5 +26,9 @@
 @import "components/feedback";
 @import "components/social";
 @import "components/articles";
+@import "components/leader";
+@import "components/bonuses";
+@import "components/contactUs";
+@import "components/footer";
 
 @import "components/media";
