--- a/src/views/_includes/blocks/articles.pug
+++ b/src/views/_includes/blocks/articles.pug
@@ -6,18 +6,28 @@
   
   a(href="#").articles__link и другие полезные статьи
 
-    .swiper-container.articles__swiper-container
-      .swiper-wrapper.articles__swiper-wrapper
-        //- .swiper-slide.articles__swiper-slide
-        //-   a(href="#").aticles__card.articles__card--full
-        //-     img.articles__card-img(src="assets/img/articles/photo1.png", alt="photo")
-        //-     .articles__card-label кухни
-        //-     span.articles__card-date 10 марта 2020
-        //-     p.articles__card-description 8 марта от КухниСити в салоне  ART DE VIDRE
+  .swiper-container.articles__swiper-container
+    .swiper-wrapper.articles__swiper-wrapper
+      .swiper-slide.articles__swiper-slide
+        a(href="#").articles__card.articles__card--full
+          img.articles__card-img(src="assets/img/articles/photo1.png", alt="photo")
+          .articles__card-label кухни
+          span.articles__card-date 10 марта 2020
+          p.articles__card-description 8 марта от КухниСити в салоне  ART DE VIDRE
 
-        .swiper-slide.articles__swiper-slide
-          a(href="#").articles__card
-            img.articles__card-img(src="assets/img/articles/photo2.jpg", alt="photo")
-            .articles__card-label экономия
-            p.articles__card-description Мастер-класс по выбору кухни
-            button.articles__card-button 
+      .swiper-slide.articles__swiper-slide
+        .articles__card
+          img.articles__card-img(src="assets/img/articles/photo2.jpg", alt="photo")
+          .articles__card-label экономия
+          p.articles__card-description Мастер-класс по выбору кухни
+          a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+        
+        .articles__card
+          img.articles__card-img(src="assets/img/articles/photo2.jpg", alt="photo")
+          .articles__card-label экономия
+          p.articles__card-description Мастер-класс по выбору кухни
+          a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+    
+    .swiper-button-prev.articles__swiper-button-prev
+    .swiper-button-next.articles__swiper-button-next
+
