--- a/src/views/_includes/blocks/footer.pug
+++ b/src/views/_includes/blocks/footer.pug
@@ -1,3 +1,68 @@
-footer.footer
-    .container
-        | footer
+section.list
+  .container.list__container
+    .list__card
+      h4.list__card-title Кухни
+      a.list__card-item(href='#') Каталог Стиль
+      a.list__card-item(href='#') Фасад
+      a.list__card-item(href='#') Покрытие
+      a.list__card-item(href='#') Планировка
+      a.list__card-item(href='#') Цвет
+      a.list__card-item(href='#') Размер
+      
+    .list__card
+      h4.list__card-title Сопутствующие товары
+      a.list__card-item(href='#') Столешницы
+      a.list__card-item(href='#') Бытовая техника
+      a.list__card-item(href='#') Шкафы-купе
+      a.list__card-item(href='#') Столовые группы
+      a.list__card-item(href='#') Барны опоры
+      a.list__card-item(href='#')  Аксессуары
+
+    .list__card
+      
+      h4.list__card-title Покупателям
+      a.list__card-item(href='#') Портфолио
+      a.list__card-item(href='#') Доставка
+      a.list__card-item(href='#') Рассрочка
+      a.list__card-item(href='#') Вызов дизайнера
+      a.list__card-item(href='#') Сборка
+      a.list__card-item(href='#')  Замер 
+    .list__card
+      h4.list__card-title Компания
+      a.list__card-item(href='#') О компании
+      a.list__card-item(href='#') Производство
+      a.list__card-item(href='#') Новости
+      a.list__card-item(href='#') Пресса
+      a.list__card-item(href='#') Видео
+      a.list__card-item(href='#')  Сотрудничество
+      a.list__card-item(href='#')  Вакансии
+      a.list__card-item(href='#')  Благотворительность
+    .list__card
+      h4.list__card-title Контакты
+      a.list__card-item(href='#') Адреса салонов
+      a.list__card-item(href='#') Офисы салонов
+    .list__card
+      a.list__card-title.list__card-title2(href='#') Калькулятор кухни
+      a.list__card-title.list__card-title2(href='#') Бесплатный дизайн
+      a.list__card-title.list__card-title2(href='#') Акции
+      a.list__card-title.list__card-title2(href='#') Распродажа
+
+    .contacts.list__card-contacts
+      a.contacts__phone(href='tel:+74991354378') +7 (499) 135-43-78
+      span.contacts__info Ежедневно с 10.00 до 22.00
+      .contacts__social
+        .social__block.contacts__social
+          a(href="#").social__block-link
+            img(src="assets/img/social/facebook.svg", alt="facebook").social__block-img
+          a(href="#").social__block-link
+            img(src="assets/img/social/vk.svg", alt="vk").social__block-img
+          a(href="#").social__block-link
+            img(src="assets/img/social/instagram.svg", alt="instagram").social__block-img
+
+footer.footer 
+  .container.footer__container
+    .footer__policy
+      span.footer__policy-text © 2019 КухниСити и Kuchenberg. Все права защищены
+      a.footer__policy-link(href='#') Политика конфиденциальности
+    .footer__visa
+        
