--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -29,4 +29,13 @@ block content
     include _includes/blocks/social
 
   block articles
-    include _includes/blocks/articles  
+    include _includes/blocks/articles 
+
+  block leader
+    include _includes/blocks/leader 
+
+  block bonuses
+    include _includes/blocks/bonuses
+
+  block contactUs
+    include _includes/blocks/contactUs
