--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -187,9 +187,31 @@ strong {
         background-color: #F1F1F1;
     }
 
-    &--red {
-        background-color: $color-red;
+    &--dark {
+        background-color: #292929;
+
     }
+}
+
+.policy {
+    font-size: 12px;
+    line-height: 118.49%;
+    /* or 14px */
+    text-align: center;
+    letter-spacing: 0.035em;
+    color: #585858;
+
+    a {
+        color: #000000;
+    }
+}
+
+.bg-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
 }
 
 .swiper {
