--- a/src/scss/components/_articles.scss
+++ b/src/scss/components/_articles.scss
@@ -6,6 +6,35 @@
         padding-right: 0;
     }
 
+    &__swiper-slide {
+        height: 372px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-right: 15px;
+    }
+
+    &__swiper-wrapper {
+        width: 270px !important;
+        padding-bottom: 100px;
+    }
+
+    &__swiper-container {
+        margin-top: 27px;
+    }
+
+    &__swiper {
+
+        &-button-next,
+        &-button-prev {
+            top: 420px;
+        }
+
+        &-button-next {
+            right: 25px;
+        }
+    }
+
     &__link {
 
 
@@ -57,6 +86,10 @@
         position: relative;
         width: 270px;
         height: 180px;
+        // display: flex;
+        overflow: hidden;
+        // justify-content: center;
+        // align-items: center;
         display: block;
 
         &::before {
@@ -72,6 +105,7 @@
 
         &--full {
             height: 372px;
+            display: block;
 
             .articles__card-description {
                 width: 204px;
@@ -124,16 +158,39 @@
         }
 
         &-button {
-            width: 50px;
-            height: 50px;
+
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            z-index: 10;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
             background-color: rgba(#FFFFFF, 0.5);
-            z-index: 10;
 
+            &::after {
+                content: '';
+                border: 8px solid transparent;
+                border-left: 8px solid #FFFFFF;
+                left: 5px;
+                display: inline-block;
+            }
+        }
+
+
+
+        &-img {
+            position: absolute;
+
+            height: 100%;
+            top: 0;
+            left: 0;
 
         }
     }
