--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -4,6 +4,17 @@
             padding-top: 10px;
         }
     }
+
+    .contactUs {
+        img {
+            min-width: 798px;
+            min-height: 216px;
+            // margin-left: auto;
+            left: 50%;
+            transform: translateX(-50%);
+            // margin-right: auto;
+        }
+    }
 }
 
 @media(min-width: 768px) {
