--- a/src/views/_includes/head.pug
+++ b/src/views/_includes/head.pug
@@ -14,6 +14,7 @@ title #{pagetitle}
 	meta(name="msapplication-config" content="assets/browserconfig.xml")
 	meta(name="theme-color" content="#ffffff")
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+<link rel="stylesheet" type="text/css" href="jquery.fancybox.min.css">
 
 meta(name="description" content="Description")
 meta(property="og:url" content="https://")
