--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -5,6 +5,16 @@
         }
     }
 
+    .hero {
+        &__title {
+            width: auto;
+        }
+
+        &__description {
+            width: auto;
+        }
+    }
+
     .contactUs {
         img {
             min-width: 798px;
@@ -162,6 +172,68 @@
             }
         }
     }
+
+    // production-768 
+    .production {
+        &__wrap {
+            flex-direction: row;
+            align-items: start;
+            width: 768px;
+            justify-content: space-between;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        &__card {
+
+            &-name {
+                font-size: 20px;
+                line-height: 25px;
+                left: 34px;
+                bottom: 34px;
+            }
+
+            &:nth-child(5) {
+                order: 1;
+                width: 458.52px;
+                height: 512.81px;
+            }
+
+            &:nth-child(2) {
+                width: 303.46px;
+                height: 342.08px;
+                order: 2;
+            }
+
+            &:nth-child(1) {
+                width: 768px;
+                height: 272px;
+                order: 5;
+                top: -181px;
+                overflow: hidden;
+
+                .production__card-img {
+                    img {
+                        min-width: 100%;
+                    }
+                }
+            }
+
+            &:nth-child(3) {
+                width: 303.46px;
+                height: 354.14px;
+                order: 4;
+                top: -176px;
+            }
+
+            &:nth-child(4) {
+                width: 458.52px;
+                height: 184.61px;
+                order: 3;
+                top: -6px;
+            }
+        }
+    }
 }
 
 @media (min-width: 1280px) {
@@ -300,6 +372,71 @@
 
         }
     }
+
+
+    // production-1280
+    .production {
+        &__wrap {
+            flex-direction: row;
+            align-items: start;
+            width: 1280px;
+            justify-content: space-between;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        &__card {
+
+            &-name {
+                font-size: 20px;
+                line-height: 25px;
+                left: 34px;
+                bottom: 34px;
+            }
+
+            &:nth-child(5) {
+                order: 1;
+                width: 762.99px;
+                height: 512.81px;
+            }
+
+            &:nth-child(2) {
+                width: 504.98px;
+                height: 342.08px;
+                order: 2;
+            }
+
+            &:nth-child(1) {
+                width: 1280px;
+                height: 308px;
+                order: 5;
+                top: -181px;
+                overflow: hidden;
+
+                .production__card-img {
+                    img {
+                        min-width: 100%;
+                    }
+                }
+            }
+
+            &:nth-child(3) {
+                width: 504.98px;
+                height: 401.3px;
+                order: 4;
+                top: -176px;
+            }
+
+            &:nth-child(4) {
+                width: 763px;
+                height: 230px;
+                order: 3;
+                top: -6px;
+            }
+        }
+    }
+
+
 }
 
 @media(min-width: 1920px) {
@@ -407,6 +544,89 @@
                 .benefits__card-description {
                     width: 272px;
                 }
+            }
+        }
+    }
+
+    // production-1920
+    .production {
+        &__wrap {
+            flex-direction: row;
+            align-items: start;
+            width: 1920px;
+            justify-content: space-between;
+            margin-left: auto;
+            margin-right: auto;
+            // flex-wrap: nowrap;
+        }
+
+        &__card {
+
+            &-img {
+                img {
+                    min-height: 100%;
+                    min-width: 100%;
+                }
+            }
+
+            &-name {
+                font-size: 20px;
+                line-height: 25px;
+                left: 34px;
+                bottom: 34px;
+            }
+
+            &:nth-child(5) {
+                order: 1;
+                width: 724px;
+                height: 647.72px;
+
+                // margin-left: 9px;
+            }
+
+            &:nth-child(2) {
+                width: 503px;
+                height: 432.07px;
+                order: 2;
+
+                .production__card-img {
+                    // top: 12px;
+
+                    img {
+                        max-width: none;
+                        min-width: 110%;
+                    }
+                }
+            }
+
+            &:nth-child(1) {
+                width: 677px;
+                height: 887px;
+                order: 3;
+                top: -1px;
+                overflow: hidden;
+
+                .production__card-img {
+                    img {
+                        min-width: 100%;
+                    }
+                }
+            }
+
+            &:nth-child(3) {
+                width: 503px;
+                height: 447.31px;
+                order: 5;
+                margin-right: auto;
+                margin-left: 9px;
+                top: -458px;
+            }
+
+            &:nth-child(4) {
+                width: 724px;
+                height: 233px;
+                order: 4;
+                top: -244px;
             }
         }
     }
