--- a/src/views/_includes/blocks/production.pug
+++ b/src/views/_includes/blocks/production.pug
@@ -1,20 +1,67 @@
 section.production
   .production__wrap
     .production__card
-      img.production__card-img(src="assets/img/production/kitchens.jpg")
+      picture.production__card-img
+        source(srcset="assets/img/production/kitchens-lg.webp", media="(min-width: 1280px)" type="image/webp")
+        source(srcset="assets/img/production/kitchens-lg.jpg", media="(min-width: 1280px)" type="image/jpg")
+        source(srcset="assets/img/production/kitchens-md.jpg", media="(min-width: 768px)" type="image/jpg")
+        //- source(srcset="assets/img/production/kitchens-md.jpg", media="(max-width: 767px)")
+        source(srcset="assets/img/production/kitchens.jpg", media="(min-width: 320px)" type="image/webp")
+        img(src="assets/img/production/kitchens.jpg", alt="photo" class="lazyload")
       span.production__card-name Кухни
+    //- <picture>
+    //-   <source type="image/webp" media="(max-width: 767px)" data-srcset="image-sm.webp">
+    //-   <source type="image/webp" media="(min-width: 768px)" data-srcset="image-lg.webp">
+    //-   <source type="image/png" media="(max-width: 767px)" data-srcset="image-sm.png">
+    //-   <source type="image/png" media="(min-width: 768px)" data-srcset="image-lg.png">
+    //-   <img class="lazyload" data-src="image.png" alt="alt text">
+    //- </picture>
 
     .production__card
-      img.production__card-img(src="assets/img/production/tables.jpg")
+      picture.production__card-img
+        source(srcset="assets/img/production/tables-xl.webp", media="(min-width: 1920px)" type="image/webp")
+        source(srcset="assets/img/production/tables-xl.jpg", media="(min-width: 1920px)" type="image/jpg")
+        source(srcset="assets/img/production/tables-lg.webp", media="(min-width: 1280px)" type="image/webp")
+        source(srcset="assets/img/production/tables-lg.jpg", media="(min-width: 1280px)" type="image/jpg")
+        source(srcset="assets/img/production/tables-md.webp", media="(min-width: 768px)" type="image/webp")
+        source(srcset="assets/img/production/tables-md.jpg", media="(min-width: 768px)" type="image/jpg")
+        //- source(srcset="assets/img/production/kitchens-md.jpg", media="(max-width: 767px)")
+        source(srcset="assets/img/production/tables.jpg", media="(min-width: 320px)" type="image/webp")
+        img(src="assets/img/production/tables.jpg", alt="photo" class="lazyload")
       span.production__card-name СТОЛЕШНИЦы
     .production__card
-      img.production__card-img(src="assets/img/production/wardrobes.jpg")
+      picture.production__card-img
+        source(srcset="assets/img/production/wardrobes-xl.webp", media="(min-width: 1920px)" type="image/webp")
+        source(srcset="assets/img/production/wardrobes-xl.jpg", media="(min-width: 1920px)" type="image/jpg")
+        source(srcset="assets/img/production/wardrobes-lg.webp", media="(min-width: 1280px)" type="image/webp")
+        source(srcset="assets/img/production/wardrobes-lg.jpg", media="(min-width: 1280px)" type="image/jpg")
+        source(srcset="assets/img/production/wardrobes-md.jpg", media="(min-width: 768px)" type="image/jpg")
+        //- source(srcset="assets/img/production/kitchens-md.jpg", media="(max-width: 767px)")
+        source(srcset="assets/img/production/wardrobes.jpg", media="(min-width: 320px)" type="image/webp")
+        img(src="assets/img/production/wardrobes.jpg", alt="photo" class="lazyload")
       span.production__card-name Шкафы-купе
 
     .production__card
-      img.production__card-img(src="assets/img/production/technics.jpg")
+      picture.production__card-img
+        source(srcset="assets/img/production/technics-xl.webp", media="(min-width: 1920px)" type="image/webp")
+        source(srcset="assets/img/production/technics-xl.jpg", media="(min-width: 1920px)" type="image/jpg")
+        source(srcset="assets/img/production/technics-lg.webp", media="(min-width: 1280px)" type="image/webp")
+        source(srcset="assets/img/production/technics-lg.jpg", media="(min-width: 1280px)" type="image/jpg")
+        source(srcset="assets/img/production/technics-md.jpg", media="(min-width: 768px)" type="image/jpg")
+        //- source(srcset="assets/img/production/kitchens-md.jpg", media="(max-width: 767px)")
+        source(srcset="assets/img/production/technics.jpg", media="(min-width: 320px)" type="image/webp")
+        img(src="assets/img/production/technics.jpg", alt="photo" class="lazyload")
       span.production__card-name Бытовая техника
 
     .production__card
-      img.production__card-img(src="assets/img/production/sales.jpg")
+      picture.production__card-img
+        source(srcset="assets/img/production/sales-xl.webp", media="(min-width: 1920px)" type="image/webp")
+        source(srcset="assets/img/production/sales-xl.jpg", media="(min-width: 1920px)" type="image/jpg")
+        source(srcset="assets/img/production/sales-lg.webp", media="(min-width: 1280px)" type="image/webp")
+        source(srcset="assets/img/production/sales-lg.jpg", media="(min-width: 1280px)" type="image/jpg")
+        source(srcset="assets/img/production/sales-md.webp", media="(min-width: 768px)" type="image/webp")
+        source(srcset="assets/img/production/sales-md.jpg", media="(min-width: 768px)" type="image/jpg")
+        //- source(srcset="assets/img/production/kitchens-md.jpg", media="(max-width: 767px)")
+        source(srcset="assets/img/production/sales.jpg", media="(min-width: 320px)" type="image/webp")
+        img(src="assets/img/production/sales.jpg", alt="photo" class="lazyload")
       span.production__card-name РАСПРОДАЖА
